# seo-mining-and-analysis

./: .gitignore  .pre-commit-config.yaml  Q&A.md  README.md  main.py  pyproject.toml
config/: schema_config.json
data/raw/scraped_html/: similarweb-byte-trading-com.html  similarweb-crunchbase-com.html  similarweb-google-com.html  similarweb-pitchbook-com.html  similarweb-stripe-com.html
data/transformed/: polars_dump.csv
db/: scraped_data.duckdb
sql/: duckdb_load.sql  duckdb_mom_rank.sql  duckdb_mom_visits.sql  duckdb_relative_scale.sql  duckdb_transform.sql
src/: analysis.py  etl_pipeline.py  visualization.py
src/models/: data_field.py
