[project]
name = "prefect-seo-mining"
version = "0.1.0"
description = "Prefect SEO Mining and Analysis"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.4.4",
    "loguru>=0.7.3",
    "polars>=1.37.1",
    "pyarrow>=23.0.0",
    "pydantic>=2.12.5",
    "selectolax>=0.4.6",
]

[dependency-groups]
dev = [
    "ruff>=0.9.0",
    "pre-commit>=4.0.0",
    "marimo>=0.19.7",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["B","E", "F", "I", "W"] # pycodestyle, Pyflakes, isort, warnings
ignore = []
